--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.95.1
-uvicorn==0.22.0
-python-dotenv==1.0.0
-langchain==0.0.263
-langserve==0.0.5  
+fastapi
+uvicorn
+python-dotenv
+langchain
+langserve
 langchain-google-genai
